<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <!--    sets text-->
    <LinearLayout
        android:id="@+id/NASADaily_apiLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NASADailyImage_ApiInformation"/>

        <ImageButton
            android:id="@+id/NASADaily_ApiHelpButton"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:onClick="displayApiHelp"
            android:background="@drawable/help"/>
    </LinearLayout>

    <EditText
        android:id="@+id/NASADaily_ApiEditText"
        android:textSize= "12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NASADaily_apiLayout"
        android:hint="@string/NASADailyImage_ApiKeyEditText" />

    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/NASADaily_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/inputLinearLayout"
        android:layout_below="@+id/NASADaily_ApiEditText">
    </ListView>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLinearLayout">

        <Button
            android:id="@+id/NasaDailyImageDatePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:text="@string/NASADailyImage_ChooseDateButton"/>

        <EditText
            android:id="@+id/NasaDailyImageDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"

            android:hint="@string/NASADailyImage_DateInput"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/NasaDailyImageSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="loadImageFromNasa"
            android:text="@string/NASADailyImage_searchButton" />
    </LinearLayout>

</RelativeLayout>