<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bing_Virtual_Earth"
    android:orientation="vertical"
    android:background="#daebe8">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/menu_title" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start"
        android:visibility="visible">

    <RelativeLayout
        android:id="@+id/enter_lat_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_for_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:text="@string/search_text"
            android:textSize="35dp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/earth_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/earth"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_below="@+id/search_for_image"/>

        <EditText
            android:id="@+id/enter_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lat_hint"
            android:padding="5dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_below="@+id/earth_image"

            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/enter_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/long_hint"
            android:padding="5dp"
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:layout_below="@+id/enter_latitude"/>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/search_btn"
            android:layout_centerInParent="true"
            android:layout_below="@+id/enter_longitude"
            android:layout_marginTop="10dp"/>


        <Button
            android:id="@+id/view_saved_img_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/view_favorites_btn"
            android:layout_centerInParent="true"
            android:layout_below="@+id/search_btn"/>





    </RelativeLayout>



        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header"
            app:menu="@menu/navigation_drawer"
            android:id="@+id/nav_view"/>

   </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>