<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".NASADailyMain">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NASADailyImage_ApiInformation"/>

        <ImageButton
            android:id="@+id/NASADaily_ApiHelpButton"
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:onClick="displayApiHelp"
            android:background="@drawable/help"/>
    </LinearLayout>

    <EditText
        android:id="@+id/NASADaily_ApiEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NASADailyImage_ApiKeyEditText"
        android:layout_marginBottom="200dp"/>

    <Button
        android:id="@+id/NasaDailyViewFavouritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToFavourites"
        android:text="@string/NASADailyImage_viewFavouritesButton" />

</LinearLayout>