<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsReaderSearch">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        app:title="BBC News" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        tools:openDrawer="start" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

    <Button
        android:id="@+id/backToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/NRVbackbtn"
        android:textAllCaps="false" />

            <Button
                android:id="@+id/viewLastArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/backToMain"
                android:layout_alignParentBottom="true"
                android:text="@string/ViewLastArticle"
                android:textAllCaps="false" />

    <Button
        android:id="@+id/goToFaveList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/NRVfavbtn"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ListView
        android:id="@+id/newsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/backToMain"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        >
    </ListView>

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header"
            app:menu="@menu/navigation_drawer"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>